# UEFI

./: .gitmodules  CMakeLists.txt  CMakePresets.json  MakeImg.cmake  main.c  support.c
cmake/: msvc-overrides.cmake  toolchain-aarch64-efi.cmake
fake_stdlib/: stdlib.h
include/: logo.h  support.h
include/efi/: boot.h  cert.h  device.h  efi.h  env.h  event.h  guid.h  memory.h  runtime.h  system.h  text.h  time.h  types.h
include/efi/protocols/: device_path.h  file.h  graphics.h  load_file.h  loaded_image.h  pxe_base_code.h  simple_file_system.h
